# telegram-bot

./: .env.dist  .gitignore  LICENSE  docker-compose.yml  docker-compose.yml~  pyproject.toml
.github/workflows/: lint.yml
app/: __main__.py  app_config.py  app_config.py~  runners.py
app/enums/: locale.py
app/factories/: __init__.py  app_config.py  bot.py  dispatcher.py  session_pool.py
app/models/: base.py  mixins.py
app/services/database/: context.py  create_pool.py  uow.py
app/services/database/repositories/: general.py
app/telegram_bot/filters/: magic_data.py
app/telegram_bot/keyboards/: base.py
app/telegram_bot/middlewares/: event_typed.py
app/telegram_bot/middlewares/outer/: database.py  user.py
app/telegram_bot/middlewares/request/: retry.py
app/utils/loggers/: __init__.py  multiline.py  multiline.py~  setup.py
