[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["wjqsm <jqsmw6@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
msgspec = "^0.18.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
